# pipeline_freshdesk

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: freshdesk_dag.py
extract/: client.py  companies.py  contacts.py  tickets.py
freshdesk_dbt/: README.md  dbt_project.yml
freshdesk_dbt/models/bronze/: schema.yml  sources.yml  stg_companies.sql  stg_contacts.sql  stg_tickets.sql
freshdesk_dbt/models/silver/: int_tickets.sql  schema.yml
load/: snowflake_loader.py
setup/: snowflake_setup.py
utils/: logger.py
